--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.10",
+        "typewriter-effect": "^2.21.0",
         "aos": "^2.3.4",
         "framer-motion": "^12.18.1",
         "lucide-react": "^0.518.0",
