--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@plunk/node": "^3.0.3",
+        "@react-email/components": "^0.5.0",
+        "@react-email/render": "^1.2.0",
         "@tailwindcss/vite": "^4.1.10",
-        "typewriter-effect": "^2.21.0",
         "aos": "^2.3.4",
         "framer-motion": "^12.18.1",
         "lucide-react": "^0.518.0",
@@ -20,7 +22,8 @@
         "react-intersection-observer": "^9.16.0",
         "react-router-dom": "^7.6.2",
         "react-use": "^17.6.0",
-        "tailwindcss": "^4.1.10"
+        "tailwindcss": "^4.1.10",
+        "typewriter-effect": "^2.21.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
