--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^19.1.0",
         "react-intersection-observer": "^9.16.0",
         "react-router-dom": "^7.6.2",
+        "react-toastify": "^11.0.5",
         "react-use": "^17.6.0",
         "tailwindcss": "^4.1.10",
         "typewriter-effect": "^2.21.0"
