--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     },
     "dependencies": {
         "@plunk/node": "^3.0.3",
+        "@portabletext/react": "^4.0.3",
         "@react-email/components": "^0.5.0",
         "@react-email/render": "^1.2.0",
+        "@sanity/client": "^7.10.0",
+        "@sanity/image-url": "^1.2.0",
+        "@sanity/types": "^4.6.0",
         "@tailwindcss/vite": "^4.1.10",
         "aos": "^2.3.4",
         "framer-motion": "^12.18.1",
